# jvm-hprof-rs

./: .gitignore  Cargo.toml  README.md  bitbucket-pipelines.yml
examples/: analyze_hprof.rs  class_hierarchy_dot.rs  dot.rs  dump_objects.rs  gc_root_paths.rs  lmdb.rs  util.rs
examples/analyze_hprof/: class_hierarchy_dot.rs  counter.rs  dot.rs  dump_objects.rs  index_chunks.rs  instance_counts.rs  obj_class_index.rs  ref_count_graph.rs  util.rs
examples/analyze_hprof/index/: index_chunks.rs  lmdb.rs  merge.rs  mod.rs
sample-dump-tool/: .gitignore  README.md  build.gradle.kts
sample-dump-tool/src/main/kotlin/org/mpierce/hprof/: HprofSampleTool.kt
src/: heap_dump.rs  lib.rs  parsing_iterator.rs
src/heap_dump/: primitive_array.rs
