[package]
name = "jvm-hprof"
version = "0.1.0"
authors = ["Marshall Pierce <marshall@mpierce.org>"]
edition = "2018"
keywords = ["jvm", "hprof"]
license-file = "LICENSE.txt"
categories = ["development-tools", "parser-implementations"]

[dependencies]
nom = "5.0.1"
getset = "0.0.9"

[dev-dependencies]
memmap = "0.7.0"
chrono = "0.4.10"
itertools = "0.8.2"
base64 = "0.11.0"
clap = "2.33.0"

[[example]]
name = "analyze_hprof"
